create dummydata and create rout to get it

--- a/app/views/bitcoins/bitcoin.html.erb
+++ b/app/views/bitcoins/bitcoin.html.erb
@@ -1,3 +1,8 @@
 <h1>Hello<h1>
 
 <h2>Bitcoin value is : <%= @bit %> </h2>
+
+
+<canvas id="chart" width="400" height="400"></canvas>
+
+<%= javascript_pack_tag 'chart' %>
