--- a/app/views/bitcoins/bitcoin.html.erb
+++ b/app/views/bitcoins/bitcoin.html.erb
@@ -1,8 +1,11 @@
-<h1>Hello<h1>
-
-<h2>Bitcoin value is : <%= @bit %> </h2>
+<h2>Bitcoin value is : <span id="bitcoin-value"> </span> </h2>
 
 
-<canvas id="chart" width="400" height="400"></canvas>
+<canvas style="height:60vh; width:80vw" id="chart" ></canvas>
+<button class="btn-time" value="year">year</button>
+<button class="btn-time" value="month">month</button>
+<button class="btn-time" value="week">week</button>
+<button class="btn-time" value="day">day</button>
+<button class="btn-time" value="hour">hour</button>
 
 <%= javascript_pack_tag 'chart' %>
