--- a/app/views/bitcoins/bitcoin.html.erb
+++ b/app/views/bitcoins/bitcoin.html.erb
@@ -1,11 +1,13 @@
-<h2>Bitcoin value is : <span id="bitcoin-value"> </span> </h2>
+<h2 class="bitcoin-val">Bitcoin value is : <span id="bitcoin-value"> </span> USD </h2>
 
 
-<canvas style="height:60vh; width:80vw" id="chart" ></canvas>
-<button class="btn-time" value="year">year</button>
-<button class="btn-time" value="month">month</button>
-<button class="btn-time" value="week">week</button>
-<button class="btn-time" value="day">day</button>
-<button class="btn-time" value="hour">hour</button>
+<canvas style="height:60vh; width:80vw" id="chart"></canvas>
+<div class="btn-group">
+    <button class="btn-time" value="year">year</button>
+    <button class="btn-time" value="month">month</button>
+    <button class="btn-time" value="week">week</button>
+    <button class="btn-time" value="day">day</button>
+    <button class="btn-time" value="hour">hour</button>
+</div>
 
 <%= javascript_pack_tag 'chart' %>
